# magnetosphere-T-models

./: .gitignore  README.md  TA16_RBF.f  Tsyganenko_wrapper.f90  Tsyganenko_wrapper.pyf  meson.build  notes.md  pyproject.toml  reconnection_metrics.f90  reconnection_metrics.mod  storms.json  test_metrics.f90
MayStorm2024/: run_storm.sh  storm.py
MayStorm2024/analysis/: Rates_Index_vs_time.py  kp_ap_index.fmt
MayStorm2024/data/: file_list.txt  run_metrics.sh
MayStorm2024/data_1h_cadence/: extension.series  lines_and_metrics.pvsm
MayStorm2024/data_may10-11_1h_cadence/: names.txt  t.pvsm
MayStorm2024/data_may11_9-16hrs_5min_cadence/: run_metrics.sh
MayStorm2024/may_10-11_1h_cadence/: compare_fields.pvsm  field_state.pvsm
MayStorm2024/may_11_9-16hrs_5m_cadence/: view_field_and_metrics.pvsm
TS05/: TS04c.for  TS05_wrapper.f90  Tsyganenko_wrapper.f90  Tsyganenko_wrapper.pyf  example_storm.py  geopack.f  geopack_dipoles.f
analysis/: calc_field_drop.f90  calc_field_drop.py  calc_flux.f90  calc_max_Nind_time.py  calc_max_flux_time.py  calc_min_symh_time.py  calc_nmdb_avg.py  calc_pressure.f90  calc_x-point_for_all_rates.f90  calc_x-point_location.f90  calc_x-point_location.py  calc_x-point_location_hall.f90  field_table.lst  format_field_for_gnuplot.f90  format_rate_for_gnuplot.f90  interact_flux.py  interact_nmdb_avg.py  interact_omni.py  interact_x-point.py  neutron_monitor_locations.txt  nice_tail_view.pvsm  overview.pvsm  plot_field_strength.py  plot_flux.py  plot_flux_without_tilt.py  plot_neutron_data.py  plot_neutron_goes_and_x-point.py  plot_neutron_goes_and_x-point.txt  plot_neutron_monitors_on_globe.py  plot_omni_data.py  plot_one_point_statistics_in_time.py  plot_pressure.py  plot_tail.gnu  plot_tail_slices.py  plot_tail_slices.sh  plot_x-point_location.py  rate_table.lst  run_fortran.sh  run_gnu.sh  run_py.sh  (+1 more)
data/: overview.pvsm  run_all_sims.sh  storm.py
data/TA16/: setup_storms.sh  storm.py  sub_jobs.sh
data/davids_selected_storms/: calculate_TA16_inds.py  calculate_tilt.f  data_dates.txt  format_dscover_data.py  notes.txt  plot_my_inds.py  plot_my_inds_vs_tsyganenko.py
data/goes/: goes_flux_data_s01.lst  goes_flux_data_s05.lst  goes_flux_data_s06.lst
data/goes_data/: get_goes_data.sh  goes_flux_data_2018-08-25.lst  goes_flux_data_2021-11-03.lst  goes_flux_data_2022-01-14.lst  goes_flux_data_2022-03-13.lst  goes_flux_data_2022-10-22.lst  goes_flux_data_2023-02-26.lst  goes_flux_data_2023-03-22.lst  goes_flux_data_2023-04-23.lst  goes_flux_data_2023-11-06.lst  goes_flux_data_2024-03-03.lst  goes_flux_data_2024-03-24.lst  goes_flux_data_2024-05-10.lst  goes_flux_data_2024-08-11.lst  goes_flux_data_2024-10-10.lst
data/input_data/: calculate_tilt  calculate_tilt.f  get_omni_data.sh
data/july_scans/: notes.md  setup_storms.sh  sub_jobs.sh
data/nmdb/: nmdb_data_s01.lst  nmdb_data_s04.lst
data/nmdb_data/: get_nmdb_data.sh  nmdb_data_2018-08-25.lst  nmdb_data_2021-11-3.lst  nmdb_data_2022-01-14.lst  nmdb_data_2022-03-13.lst  nmdb_data_2022-10-22.lst  nmdb_data_2023-02-26.lst  nmdb_data_2023-03-22.lst  nmdb_data_2023-04-23.lst  nmdb_data_2023-11-6.lst  nmdb_data_2024-03-03.lst  nmdb_data_2024-03-24.lst  nmdb_data_2024-05-10.lst  nmdb_data_2024-08-11.lst  nmdb_data_2024-10-10.lst
data/s01/: flux_Bx.lst  pressure.lst  x-point_location.lst
data/s02/: run_recon.sh  run_storm.sh
data/s06/: input_data.lst  x-point_location.lst
data/slice_sims/: notes.md
data/tsyganenko_data/: Data_format.txt
data_handling/: Fill_IMF_and_SW_gaps.py  README.md  calculate_TA16_inds.py  calculate_tilt.f
data_handling/data/: names.txt  omni_1min_2018-08-25_to_27.lst  omni_1min_2018-08-25_to_27_TA16_parameters.lst  omni_1min_2018-08-25_to_27_filled_SW_and_IMF_gaps.lst  omni_1min_2021-11-03-1800_to_04-1800_TA16_parameters.lst  omni_1min_2022-01-14_to_16.lst  omni_1min_2022-01-14_to_16_TA16_parameters.lst  omni_1min_2022-03-13_to_14_TA16_parameters.lst  omni_1min_2022-10-22_to_24_TA16_parameters.lst  omni_1min_2023-02-26-1200_to_27-2400_TA16_parameters.lst  omni_1min_2023-03-22_to_24_with_tilt.lst  omni_1min_2023-04-23-1200_to_24-2400.lst  omni_1min_2023-04-23-1200_to_24-2400_TA16_parameters.lst  omni_1min_2023-04-23-1200_to_24-2400_filled_SW_and_IMF_gaps.lst  omni_1min_2023-11-06_to_06_TA16_parameters.lst  omni_1min_2024-03-03-0000_to_04-1200_TA16_parameters.lst  omni_1min_2024-03-03-0000_to_04-1200_filled_SW_and_IMF_gaps.lst  omni_1min_2024-05-10_to_11.lst  (+9 more)
example/: README.md
examples/: README.md  example_storm.py  fortran_example_storm.f90  graph_reconnection_metrics.py  python_example_storm.py  ta16_example_storm.py
figs/: README.md  setup_dirs.sh  summary.tex
input_preparation/: calculate_tilt.f  format_data.py
old_data/: notes.md
setup_scripts/: get_nmdb_data.sh  get_omni_data.sh  setup_data_dirs.sh  setup_ta16_model.sh
sim_codes/: README.md  TA16_RBF.f  TS05.f  full_pressure.f90  main_TA16.f90  main_TS05.f90  pressure_and_flux.f90  recon.f90  recon_hall.f90  recon_seperated.f90
src/: README.md  TA16.f90  TA16_RBF.f  TA16_model.f90  TS04c.for  TS05.f  TsyganenkoWrapper.f90  TsyganenkoWrapper.pyf  Tsyganenko_wrapper.f90  Tsyganenko_wrapper.pyf  compiler_command.md  control.f90  inout.f90  magnetosphereModels.f90  main.f90  main_program.f90  meson.build  notes  parser.f90  pyproject.toml  python_wrapper.f90  readme.md  recon.f90  reconnectionMetrics.f90  reconnection_metrics.f90  run_metrics.f90  run_ts05.f90  test_common.f90  test_old.f  wrapper.f90  wrapper.pyf
src/core/: TS05.f  control.f90  geopack.f  recon.f90
src/input/: omni_data.fmt
src/magnetomodels/: ctype_wrapper.f90
src/main/: run_ta16.f90
src/py_wrapper/: _magnetoTmodels.c  c_ext_wrapper.f90  f90wrap_python_wrapper.f90  magnetoTmodels.py  py_wrapper.py  python_wrapper.f90  python_wrapper.pyf
src/python/: README.md  __init__.py  magnetoTmodels.py  magnetoTpython.f90  magnetomodels.py  magnetomodels.pyx  pyproject.toml
src/python_wrapper/: magnetomodels.py
src/tests/: TA16_RBF.f  hold  ta16_tests.f90
storms/: setup.sh
summary/: append_data.sh  hold.md  storms.md
(+538 files in other folders)
